# nomad-agent-movie

./: .gitignore  chatbot_memory.ipynb  movie_agent.ipynb  pyproject.toml
